--- a/composer.json
+++ b/composer.json
@@ -5,15 +5,19 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "5.0.*"
+		"laravel/framework": "5.0.*",
+		"illuminate/workbench": "5.0.*@dev",
+		"illuminate/html": "~5.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
-		"phpspec/phpspec": "~2.1"
+		"phpspec/phpspec": "~2.1",
+		"laracasts/generators": "~1.1"
 	},
 	"autoload": {
 		"classmap": [
-			"database"
+			"database",
+			"workbench/mrk/bc"
 		],
 		"psr-4": {
 			"App\\": "app/"
